Fixed interpolated precision/graph tables